--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html>
+<body style="background-color:#DADADA">
 <head>
-<title>YAY IT WORKS</title>
+<title>You found me!</title>
 </head>
 <body>
 
-<h1>YAAAASSSSSS</h1>
-<p>YAYYYY</p>
+<center>
+  <h1>
+    That's not how this works!!!
+    Add this repo to Cydia!
+    <b>repo.OrangeFractal.net</b>
+  </h1>
+</center>
 
+<center>
+  <h2><br><br>Gunter! Stop that!<br></h2>
+
+<img src="http://data1.whicdn.com/images/49614056/large.gif" alt="Gunter" style="width:500px;height:281px;">
+
+</center>
 </body>
 </html>
