--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 
 <center>
   <h1>
-    That's not how this works!!!
-    Add this repo to Cydia!
+    <br>
+    That's not how this works!!!<br>
+    Add this link to Cydia!<br>
     <b>repo.OrangeFractal.net</b>
   </h1>
 </center>
