--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <center>
   <h1>
     <br>
-    That's not how this works!!!<br>
+    That's not how this works!!!<br><br>
     Add this link to Cydia!<br>
     <b>repo.OrangeFractal.net</b>
   </h1>
 </center>
 
 <center>
-  <h2><br><br>Gunter! Stop that!<br></h2>
+  <h2><br><br><br>Gunter! Stop that!<br></h2>
 
 <img src="http://data1.whicdn.com/images/49614056/large.gif" alt="Gunter" style="width:500px;height:281px;">
 
