--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body style="background-color:#DADADA">
 <head>
-<title>You found me!</title>
+<title>This isn't right!</title>
 </head>
 <body>
 
@@ -10,7 +10,7 @@
   <h1>
     <br>
     That's not how this works!!!<br><br>
-    Add this link to Cydia!<br>
+    Add this link to Cydia!<br><br>
     <b>repo.OrangeFractal.net</b>
   </h1>
 </center>
