--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body style="background-color:#DADADA">
 <head>
-<title>This isn't right!</title>
+<title>OrangeFractal's Repo</title>
 </head>
 <body>
 
