--- a/depictions/ArcadeKeypad.html
+++ b/depictions/ArcadeKeypad.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:#DADADA">
+  
 <head>
-<title>Test</title>
+<title>Keypad - Arcade</title>
 </head>
+  
 <body>
 
 <center>
-  <h1>
-    Just a test
-  </h1>
+  
+  <h2>
+    Description
+  </h2>
+  <p>
+    This is an Arcade styled keypad. It comes in a black and white variant that can be toggled in winterboard.
+  </p>
+  
+  <h2>
+    Changelog
+  </h2>
+  <p>
+    <b>Version 1.0.1</b>
+    <br>Rearranged some files
+    <br>
+    <br><b>Version 1.0</b>
+    <br>Initial Release
+  </p>
+  
 </center>
 
 </body>
