--- a/depictions/ArcadeKeypad.html
+++ b/depictions/ArcadeKeypad.html
@@ -13,17 +13,14 @@
     Description
   </h2>
   
-  <ul>
-    <li>
   <p>
     This is an Arcade styled keypad. It comes in a black and white variant that can be toggled in winterboard.
   </p>
-    </li>
-  </ul>
 
   <h2>
-    Changelog
+    <br>Changelog
   </h2>
+  
   <p>
     <b>Version 1.0.1</b>
     <br>Rearranged some files
