--- a/depictions/ArcadeKeypad.html
+++ b/depictions/ArcadeKeypad.html
@@ -1,35 +1,43 @@
 <!DOCTYPE html>
 <html>
   
-<head>
-<title>Keypad - Arcade</title>
-</head>
-  
-<body>
-
-<center>
-  
-  <h2>
-    Description
-  </h2>
-  
-  <p>
-    This is an Arcade styled keypad. It comes in a black and white variant that can be toggled in winterboard.
-  </p>
-
-  <h2>
-    <br>Changelog
-  </h2>
-  
-  <p>
+	<head>
+		<title>Keypad - Arcade</title>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=0" />
+		<link rel="stylesheet" type="text/css" href="/css/ios7.css" />
+		<script type="text/javascript" src="/js/jquery-2.1.0.min.js"></script>
+	</head>
+	
+	<body>
+		<center><h2>Description</h2></center>
+		<ul>
+			<li>
+				<p>
+					This is an Arcade styled keypad. It comes in a black and white variant that can be toggled in winterboard.
+				</p>
+			
+			</li>
+			<li>
+			    <p>
     <b>Version 1.0.1</b>
     <br>Rearranged some files
-    <br>
+    </p>
+    
+    <p>
     <br><b>Version 1.0</b>
     <br>Initial Release
-  </p>
-  
-</center>
+          </p>
+          
+			</li>
 
-</body>
+			<li>
+				<a href="https://reddit.com/user/orangefractal">Find me on Reddit! /u/OrangeFractal</a>
+			</li>
+		</ul>
+		<p>
+			© 2015 , OrangeFractal
+		</p>
+		<script type="text/javascript" src="/js/ios7.js"></script>
+	</body>
 </html>
