--- a/depictions/ArcadeKeypad.html
+++ b/depictions/ArcadeKeypad.html
@@ -1,16 +1,25 @@
 ﻿<!DOCTYPE html>
-<html>
-<body style="background-color:#DADADA">
-<head>
-<title>Test</title>
-</head>
-<body>
-
-<center>
-  <h1>
-    Just a test 4
-  </h1>
-</center>
-
-</body>
+<html lang="en">
+  <head>
+  <link rel="stylesheet" type="text/css" href="/css.depictiondesign.css">
+  </head>
+  <body>
+    <h1>Keypad - Arcade</h1>
+    <br>
+    <h2>Description</h2>
+    <p>This is an "Arcade" tyled eypad for your lockscreen and dialer.</p>
+    <br>
+    <h2>Changelog</h2>
+    <h3>1.0.3</h3>
+    <p>Rearranged file structure</p>
+    <br>
+    <h3>1.0.2</h3>
+    <p>Rearranged file structure and fixed download errors.</p>
+    <br>
+    <h3>1.0.1</h3>
+    <p>Rearranged file structure</p>
+    <br>
+    <h3>1.0</h3>
+    <p>Initial release</p>
+  </body>
 </html>
