--- a/depictions/ArcadeKeypad.html
+++ b/depictions/ArcadeKeypad.html
@@ -1,13 +1,13 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
   <head>
-  <link rel="stylesheet" type="text/css" href="/css.depictiondesign.css">
+  <link rel="stylesheet" type="text/css" href="/css/depictiondesign.css">
   </head>
   <body>
     <h1>Keypad - Arcade</h1>
     <br>
     <h2>Description</h2>
-    <p>This is an "Arcade" tyled eypad for your lockscreen and dialer.</p>
+    <p>This is an "Arcade" styled keypad for your lockscreen and dialer.</p>
     <br>
     <h2>Changelog</h2>
     <h3>1.0.3</h3>
