--- a/depictions/ArcadeKeypad.html
+++ b/depictions/ArcadeKeypad.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
   <head>
-  <link rel="stylesheet" type="text/css" href="/css/depictiondesign.css" />
+  <link rel="stylesheet" type="text/css" href="/cs/depictiondesign.css" />
   </head>
   <body>
     <h1>Keypad - Arcade</h1>
