--- a/depictions/ArcadeKeypad.html
+++ b/depictions/ArcadeKeypad.html
@@ -1,6 +1,9 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
   <head>
+  <title>Keypad - Arcade</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=0" />
   <link rel="stylesheet" type="text/css" href="/css/depictiondesign.css" />
   </head>
   <body>
