--- a/depictions/ArcadeKeypad.html
+++ b/depictions/ArcadeKeypad.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+  <body style="background-color: white">
   <head>
   <title>Keypad - Arcade</title>
   <meta charset="UTF-8" />
