--- a/depictions/ArcadeKeypad.html
+++ b/depictions/ArcadeKeypad.html
@@ -17,7 +17,7 @@
     <h3>1.0.3</h3>
     <p>Rearranged file structure</p>
     <h3>1.0.2</h3>
-    <p>Rearranged file structure and fixed download errors.</p>
+    <p>Rearranged file structure and fixed download errors</p>
     <h3>1.0.1</h3>
     <p>Rearranged file structure</p>
     <h3>1.0</h3>
