--- a/depictions/ArcadeKeypad.html
+++ b/depictions/ArcadeKeypad.html
@@ -11,7 +11,7 @@
     <h1>Keypad - Arcade</h1>
     <br>
     <h2>Description</h2>
-    <p>This is an "Arcade" styled keypad for your lockscreen and dialer.</p>
+    <p>This is an "Arcade" styled keypad for your lockscreen and dialer keypads.</p>
     <br>
     <h2>Changelog</h2>
     <h3>1.0.3</h3>
