--- a/depictions/LockGlyphSonictheHedgehog.html
+++ b/depictions/LockGlyphSonictheHedgehog.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
-<html>
-<body style="background-color:#DADADA">
-<head>
-<title>Test</title>
-</head>
-<body>
-
-<center>
-  <h1>
-    Just a test
-  </h1>
-</center>
-
-</body>
+<html lang="en">
+  <body style="background-color: white">
+  <head>
+  <title>LockGlyph - Sonic the Hedgehog</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=0" />
+  <link rel="stylesheet" type="text/css" href="/css/depictiondesign.css" />
+  </head>
+  <body>
+    <h1>LockGlyph - Sonic the Hedgehog</h1>
+    <br>
+    <h2>Description</h2>
+    <p>This is a pack of Sonic the Hedgehog styled LockGlyphs.</p>
+    <br>
+    <h2>Changelog</h2>
+    <h3>1.0.2</h3>
+    <p>Added more glyphs</p>
+    <h3>1.0.1</h3>
+    <p>Rearranged file structure</p>
+    <h3>1.0</h3>
+    <p>Initial release</p>
+    <br>
+    <br>
+    <p>© 2015, OrangeFractal</p>
+  </body>
 </html>
