--- a/depictions/LockGlyphKingdomHearts.html
+++ b/depictions/LockGlyphKingdomHearts.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <body style="background-color: white">
   <head>
-  <title>LockGlyph - Kingdeom Hearts</title>
+  <title>LockGlyph - Kingdom Hearts</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=0" />
   <link rel="stylesheet" type="text/css" href="/css/depictiondesign.css" />
   </head>
   <body>
-    <h1>LockGlyph - Kingdeom Hearts</h1>
+    <h1>LockGlyph - Kingdom Hearts</h1>
     <br>
     <h2>Description</h2>
     <p>This is a pack of Kingdom Hearts styled LockGlyphs</p>
