--- a/depictions/LockGlyphWorldofWarcraft.html
+++ b/depictions/LockGlyphWorldofWarcraft.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="/css/depictiondesign.css" />
   </head>
   <body>
-    <h1>LockGlyph - World of Warcraft/h1>
+    <h1>LockGlyph - World of Warcraft</h1>
     <br>
     <h2>Description</h2>
     <p>This is a pack of World of Warcraft styled LockGlyphs</p>
