--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <center>
   <h1>
     That's not how this works!!!<br><br>
-    Add this link to Cydia!<br><br>
+    Add this to Cydia!<br><br>
     <b>repo.OrangeFractal.net</b>
   </h1>
 </center>
