--- a/depictions/Snipe.html
+++ b/depictions/Snipe.html
@@ -11,7 +11,7 @@
     <h1>Message Bubbles - Snipe</h1>
     <br>
     <h2>Description</h2>
-    <p>This is a "Snipe" stylized theme for message bubbles.</p>
+    <p>This is a "Snipe" stylized theme for message bubbles. Alternate between the two variations by enabling and disabling "Bubble Outline Only" inside of Messages Customiser.</p>
     <br>
     <h2>Changelog</h2>
     <h3>1.0.1</h3>
