--- a/depictions/w0rdKeypad.html
+++ b/depictions/w0rdKeypad.html
@@ -14,6 +14,8 @@
     <p>This is a "number and word" styled keypad for your lockscreen and dialer.</p>
     <br>
     <h2>Changelog</h2>
+    <h3>1.0.1</h3>
+    <p>Rearranged file structure</p>
     <h3>1.0</h3>
     <p>Initial release</p>
     <br>
