--- a/depictions/LCDKeypad2.0.html
+++ b/depictions/LCDKeypad2.0.html
@@ -15,7 +15,7 @@
     <br>
     <h2>Changelog</h2>
 	<h3>2.1</h3>
-    <p>Works with all iPhones and all iOS' (maybe)</p>
+    <p>Works with all current iPhones and all iOS' (maybe)</p>
     <h3>2.0</h3>
     <p>Initial release</p>
     <br>
