--- a/depictions/w0rdKeypad.html
+++ b/depictions/w0rdKeypad.html
@@ -22,8 +22,12 @@
     <p>Rearranged file structure</p>
     <h3>1.0</h3>
     <p>Initial release</p>
+	<br>
+	<h2>Screenshots</h2>
+	<img src="images/w0rdKeypadImages/W0rdKeypad1.png" alt="w0rdKeypad1" style="width:640px;height:1136px;">
     <br>
     <br>
+	
     <p>© 2015, OrangeFractal</p>
   </body>
 </html>
