--- a/depictions/w0rdKeypad.html
+++ b/depictions/w0rdKeypad.html
@@ -24,7 +24,7 @@
     <p>Initial release</p>
 	<br>
 	<h2>Screenshots</h2>
-	<img src="/images/w0rdKeypad1.png" alt="w0rdKeypad1" style="width:300px;height:548px;" />
+	<img src="/images/w0rdKeypad1.png" alt="w0rdKeypad1" class="center" style="width:300px;height:548px;" />
     <br>
     <br>
 	
