--- a/depictions/w0rdKeypad.html
+++ b/depictions/w0rdKeypad.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="/css/depictiondesign.css" />
   </head>
   <body>
-    <h1>Keypad - w0rd</h1>
+    <h1>Keypad - wOrd</h1>
     <br>
     <h2>Description</h2>
     <p>This is a "number and word" styled keypad for your lockscreen and dialer.</p>
