--- a/depictions/Snipe.html
+++ b/depictions/Snipe.html
@@ -18,6 +18,9 @@
     <p>Rearranged file structure</p>
     <h3>1.0</h3>
     <p>Initial release</p>
+	<br>
+	<h2>Screenshots</h2>
+	<img src="/images/Snipe1.png" alt="Snipe1" class="center" style="width:300px;height:548px;" />
     <br>
     <br>
     <p>© 2015, OrangeFractal</p>
