--- a/depictions/PrecursorKeypad.html
+++ b/depictions/PrecursorKeypad.html
@@ -22,6 +22,9 @@
     <p>Rearranged file structure</p>
     <h3>1.0</h3>
     <p>Initial release</p>
+	<br>
+	<h2>Screenshots</h2>
+	<img src="/images/PrecursorKeypad1.png" alt="PrecursorKeypad1" class="center" style="width:300px;height:548px;" />
     <br>
     <br>
     <p>© 2015, OrangeFractal</p>
