--- a/depictions/Snipe.html
+++ b/depictions/Snipe.html
@@ -21,6 +21,7 @@
 	<br>
 	<h2>Screenshots</h2>
 	<img src="/images/Snipe1.png" alt="Snipe1" class="center" style="width:300px;height:548px;" />
+	<img src="/images/Snipe2.png" alt="Snipe2" class="center" style="width:300px;height:548px;" />
     <br>
     <br>
     <p>© 2015, OrangeFractal</p>
