--- a/depictions/ZeppelinSonictheHedgehog.html
+++ b/depictions/ZeppelinSonictheHedgehog.html
@@ -20,6 +20,13 @@
     <p>Rearranged file structure</p>
     <h3>1.0</h3>
     <p>Initial release</p>
+	<br>
+	<h2>Screenshots</h2>
+	<img src="/images/ZeppelinSonic1.png" alt="ZeppelinSonic1" class="center" style="width:300px;height:19px;" />
+	<br>
+	<img src="/images/ZeppelinSonic2.png" alt="ZeppelinSonic2" class="center" style="width:300px;height:19px;" />
+	<br>
+	<img src="/images/ZeppelinSonic3.png" alt="ZeppelinSonic3" class="center" style="width:300px;height:19px;" />
     <br>
     <br>
     <p>© 2015, OrangeFractal</p>
