--- a/index.html
+++ b/index.html
@@ -20,5 +20,24 @@
 <img src="http://data1.whicdn.com/images/49614056/large.gif" alt="Gunter" style="width:500px;height:281px;">
 
 </center>
+
+<!-- Start of StatCounter Code for Default Guide -->
+<script type="text/javascript">
+var sc_project=10540762; 
+var sc_invisible=1; 
+var sc_security="d891a1f7"; 
+var scJsHost = (("https:" == document.location.protocol) ?
+"https://secure." : "http://www.");
+document.write("<sc"+"ript type='text/javascript' src='" +
+scJsHost+
+"statcounter.com/counter/counter.js'></"+"script>");
+</script>
+<noscript><div class="statcounter"><a title="web analytics"
+href="http://statcounter.com/" target="_blank"><img
+class="statcounter"
+src="http://c.statcounter.com/10540762/0/d891a1f7/1/"
+alt="web analytics"></a></div></noscript>
+<!-- End of StatCounter Code for Default Guide -->
+
 </body>
 </html>
