--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@ document.write("<sc"+"ript type='text/javascript' src='" +
 scJsHost+
 "statcounter.com/counter/counter.js'></"+"script>");
 </script>
-<noscript><div class="statcounter"><a title="web analytics"
+<noscript><div class="statcounter"><a title="hits counter"
 href="http://statcounter.com/" target="_blank"><img
 class="statcounter"
 src="http://c.statcounter.com/10540762/0/d891a1f7/1/"
-alt="web analytics"></a></div></noscript>
+alt="hits counter"></a></div></noscript>
 <!-- End of StatCounter Code for Default Guide -->
 
 </body>
