--- a/depictions/ArcadeKeypad.html
+++ b/depictions/ArcadeKeypad.html
@@ -28,5 +28,24 @@
     <br>
     <br>
     <p>© 2015, OrangeFractal</p>
+    
+    <!-- Start of StatCounter Code for Default Guide -->
+<script type="text/javascript">
+var sc_project=10540945; 
+var sc_invisible=1; 
+var sc_security="3e25d96b"; 
+var scJsHost = (("https:" == document.location.protocol) ?
+"https://secure." : "http://www.");
+document.write("<sc"+"ript type='text/javascript' src='" +
+scJsHost+
+"statcounter.com/counter/counter.js'></"+"script>");
+</script>
+<noscript><div class="statcounter"><a title="shopify stats"
+href="http://statcounter.com/shopify/" target="_blank"><img
+class="statcounter"
+src="http://c.statcounter.com/10540945/0/3e25d96b/1/"
+alt="shopify stats"></a></div></noscript>
+<!-- End of StatCounter Code for Default Guide -->
+
   </body>
 </html>
