--- a/depictions/ArcadeKeypad.html
+++ b/depictions/ArcadeKeypad.html
@@ -29,7 +29,7 @@
     <br>
     <p>© 2015, OrangeFractal</p>
     
-    <!-- Start of StatCounter Code for Default Guide -->
+   <!-- Start of StatCounter Code for Default Guide -->
 <script type="text/javascript">
 var sc_project=10540945; 
 var sc_invisible=1; 
@@ -40,11 +40,11 @@ document.write("<sc"+"ript type='text/javascript' src='" +
 scJsHost+
 "statcounter.com/counter/counter.js'></"+"script>");
 </script>
-<noscript><div class="statcounter"><a title="shopify stats"
-href="http://statcounter.com/shopify/" target="_blank"><img
-class="statcounter"
+<noscript><div class="statcounter"><a title="shopify site
+analytics" href="http://statcounter.com/shopify/"
+target="_blank"><img class="statcounter"
 src="http://c.statcounter.com/10540945/0/3e25d96b/1/"
-alt="shopify stats"></a></div></noscript>
+alt="shopify site analytics"></a></div></noscript>
 <!-- End of StatCounter Code for Default Guide -->
 
   </body>
