--- a/debs/index.html
+++ b/debs/index.html
@@ -23,9 +23,9 @@
 
 <!-- Start of StatCounter Code for Default Guide -->
 <script type="text/javascript">
-var sc_project=10540762; 
+var sc_project=10540991; 
 var sc_invisible=1; 
-var sc_security="d891a1f7"; 
+var sc_security="225dc70e"; 
 var scJsHost = (("https:" == document.location.protocol) ?
 "https://secure." : "http://www.");
 document.write("<sc"+"ript type='text/javascript' src='" +
@@ -33,9 +33,9 @@ scJsHost+
 "statcounter.com/counter/counter.js'></"+"script>");
 </script>
 <noscript><div class="statcounter"><a title="hits counter"
-href="http://statcounter.com/" target="_blank"><img
-class="statcounter"
-src="http://c.statcounter.com/10540762/0/d891a1f7/1/"
+href="http://statcounter.com/free-hit-counter/"
+target="_blank"><img class="statcounter"
+src="http://c.statcounter.com/10540991/0/225dc70e/1/"
 alt="hits counter"></a></div></noscript>
 <!-- End of StatCounter Code for Default Guide -->
 
