--- a/debs/index.html
+++ b/debs/index.html
@@ -23,20 +23,20 @@
 
 <!-- Start of StatCounter Code for Default Guide -->
 <script type="text/javascript">
-var sc_project=10540991; 
+var sc_project=10540990; 
 var sc_invisible=1; 
-var sc_security="225dc70e"; 
+var sc_security="aa51cbf6"; 
 var scJsHost = (("https:" == document.location.protocol) ?
 "https://secure." : "http://www.");
 document.write("<sc"+"ript type='text/javascript' src='" +
 scJsHost+
 "statcounter.com/counter/counter.js'></"+"script>");
 </script>
-<noscript><div class="statcounter"><a title="hits counter"
-href="http://statcounter.com/free-hit-counter/"
+<noscript><div class="statcounter"><a title="shopify visitor
+statistics" href="http://statcounter.com/shopify/"
 target="_blank"><img class="statcounter"
-src="http://c.statcounter.com/10540991/0/225dc70e/1/"
-alt="hits counter"></a></div></noscript>
+src="http://c.statcounter.com/10540990/0/aa51cbf6/1/"
+alt="shopify visitor statistics"></a></div></noscript>
 <!-- End of StatCounter Code for Default Guide -->
 
 </body>
