--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1>
     That's not how this works!!!<br><br>
     Add this to Cydia!<br><br>
-    <b>repo.OrangeFractal.net</b>
+    <b>repo.orangefractal.net</b>
   </h1>
 </center>
 
