--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <center>
   <h1>
     That's not how this works!!!<br><br>
-    Add this to Cydia!<br><br>
+    Add the link below to Cydia!<br><br>
     <b>repo.orangefractal.net</b>
   </h1>
 </center>
