--- a/depictions/LCDKeypad2.0.html
+++ b/depictions/LCDKeypad2.0.html
@@ -24,5 +24,24 @@
     <br>
     <br>
     <p>© 2015, OrangeFractal</p>
+    
+    <!-- Start of StatCounter Code for Default Guide -->
+<script type="text/javascript">
+var sc_project=10541129; 
+var sc_invisible=1; 
+var sc_security="48a1325a"; 
+var scJsHost = (("https:" == document.location.protocol) ?
+"https://secure." : "http://www.");
+document.write("<sc"+"ript type='text/javascript' src='" +
+scJsHost+
+"statcounter.com/counter/counter.js'></"+"script>");
+</script>
+<noscript><div class="statcounter"><a title="shopify site
+analytics" href="http://statcounter.com/shopify/"
+target="_blank"><img class="statcounter"
+src="http://c.statcounter.com/10541129/0/48a1325a/1/"
+alt="shopify site analytics"></a></div></noscript>
+<!-- End of StatCounter Code for Default Guide -->
+
   </body>
 </html>
