--- a/depictions/w0rdKeypad.html
+++ b/depictions/w0rdKeypad.html
@@ -15,7 +15,7 @@
     <br>
     <h2>Changelog</h2>
 	<h3>1.1.1</h3>
-    <p>Now works with all iPhones and all iOS' (hopefully)</p>
+    <p>Now works with all iPhones, Ipads, and iOS' (hopefully)</p>
 	<h3>1.1</h3>
     <p>Increased readability of w0rds and now works with all iPhones and all iOS' (maybe)</p>
     <h3>1.0.1</h3>
