--- a/depictions/LCDKeypad.html
+++ b/depictions/LCDKeypad.html
@@ -15,7 +15,7 @@
     <br>
     <h2>Changelog</h2>
 	<h3>1.1</h3>
-    <p>Now works with all iPhones and all iOS' (hopefully)</p>
+    <p>Now works with all iPhones, Ipads, and iOS' (hopefully)</p>
     <h3>1.0.3</h3>
     <p>Rearranged file structure</p>
     <h3>1.0.2</h3>
