--- a/depictions/w0rdKeypad.html
+++ b/depictions/w0rdKeypad.html
@@ -29,8 +29,8 @@
     <br>
 	
     <p>© 2015, OrangeFractal</p>
-	
-	<!-- Start of StatCounter Code for Default Guide -->
+    
+<!-- Start of StatCounter Code for Default Guide -->
 <script type="text/javascript">
 var sc_project=10554473; 
 var sc_invisible=1; 
@@ -41,11 +41,11 @@ document.write("<sc"+"ript type='text/javascript' src='" +
 scJsHost+
 "statcounter.com/counter/counter.js'></"+"script>");
 </script>
-<noscript><div class="statcounter"><a title="free hit
-counters" href="http://statcounter.com/"
+<noscript><div class="statcounter"><a title="shopify
+analytics ecommerce" href="http://statcounter.com/shopify/"
 target="_blank"><img class="statcounter"
 src="http://c.statcounter.com/10554473/0/f8964270/1/"
-alt="free hit counters"></a></div></noscript>
+alt="shopify analytics ecommerce"></a></div></noscript>
 <!-- End of StatCounter Code for Default Guide -->
 
   </body>
