--- a/depictions/RomanKeypad.html
+++ b/depictions/RomanKeypad.html
@@ -26,5 +26,26 @@
     <br>
     <br>
     <p>© 2015, OrangeFractal</p>
+	
+	<!-- Start of StatCounter Code for Default Guide -->
+<script type="text/javascript">
+var sc_project=10554481; 
+var sc_invisible=1; 
+var sc_security="170d067f"; 
+var scJsHost = (("https:" == document.location.protocol) ?
+"https://secure." : "http://www.");
+document.write("<sc"+"ript type='text/javascript' src='" +
+scJsHost+
+"statcounter.com/counter/counter.js'></"+"script>");
+</script>
+<noscript><div class="statcounter"><a title="shopify
+analytics ecommerce tracking"
+href="http://statcounter.com/shopify/" target="_blank"><img
+class="statcounter"
+src="http://c.statcounter.com/10554481/0/170d067f/1/"
+alt="shopify analytics ecommerce
+tracking"></a></div></noscript>
+<!-- End of StatCounter Code for Default Guide -->
+
   </body>
 </html>
