--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <center>
   <h2><br><br><br>Gunter! Stop that!<br></h2>
 
-<img src="http://data1.whicdn.com/images/49614056/large.gif" alt="Gunter" style="width:500px;height:281px;">
+<img src="https://media.giphy.com/media/12aDsmTJQHz7RS/giphy.gif" alt="Gunter" style="width:500px;height:281px;">
 
 </center>
 
